--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "RavenDB link extension",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
   "icons": {
     "16": "icons/icon16.png",
@@ -16,6 +16,7 @@
         "http://*/studio/index.html*"
       ],
       "js": [
+        "src/inject/underscore.js",
         "src/inject/inject.js"
       ]
     }
